Add search reranker BAAI/bge-reranker-v2-m3